# AIGC-SDK

./: .gitignore  README.md  config.yml  main.py  pyproject.toml
api/: __init__.py  base_api.py  bmwhisper.py  emotivoice.py  img2txt.py  indextts.py  llm_general.py  llm_general_v2.py  minicpmv.py  qwen2_5vl.py  qwen3vl.py  rmbg.py  roop_face.py  sd_lcm.py  sherpa.py  upscaler.py
bmodels/minicpmo/processor_config/: added_tokens.json  processing_minicpmv.py  special_tokens_map.json  tokenization_minicpmv_fast.py  tokenizer.json  tokenizer_config.json
docs/: API使用说明.md  Airbox连接方式.md  TPU内存大小修改方法.md  边侧模型部署指南.md  镜像打包指南.md  黑盒子配置喇叭.md
repo/bmwhisper/: decoding.py  download.sh  model.py  transcribe.py  utils.py  utils_backup.py
repo/emotivoice/: .gitignore  demo_page.py  download.sh
repo/emotivoice/config/: config.py
repo/emotivoice/models/: __init__.py
repo/emotivoice/models/prompt_tts_modified/: jets.py  model_open_source.py  simbert.py
repo/emotivoice/tone_color_conversion/: api.py  converter.py
repo/img2txt/: download.sh  img_speaking_pipeline.py
repo/indextts/: .gitignore  download.sh
repo/llm_general/: download.sh
repo/minicpmv/: download.sh
repo/qwen2_5vl/: download.sh
repo/qwen2_5vl/python_demo/: CMakeLists.txt  chat.cpp  pipeline.py
repo/qwen3vl/: download.sh
repo/qwen3vl/python_demo/: CMakeLists.txt  chat.cpp  pipeline.py
repo/rmbg/: download.sh
repo/roop_face/: download.sh
repo/roop_face/roop/: npuengine.py
repo/roop_face/roop/codeformer/: codeformer_model.py
repo/roop_face/roop/facelib/detection/: __init__.py
repo/roop_face/roop/facelib/utils/: face_restoration_helper.py
repo/sd_lcm/: download.sh
repo/sherpa/: CMakeLists.txt  download.sh
repo/sherpa/cmake/: asio.cmake  cargs.cmake  eigen.cmake  espeak-ng-for-piper.cmake  googletest.cmake  kaldi-decoder.cmake  kaldi-native-fbank.cmake  kaldifst.cmake  onnxruntime-linux-aarch64-static.cmake  onnxruntime-linux-aarch64.cmake  onnxruntime-linux-x86_64-static.cmake  onnxruntime-linux-x86_64.cmake  openfst.cmake  piper-phonemize.cmake  portaudio.cmake  pybind11.cmake  websocketpp.cmake
repo/sherpa/sherpa-onnx/csrc/: CMakeLists.txt  cat.cc  online-zipformer-transducer-model.h  online-zipformer2-transducer-model.h  onnx-to-bm.cc  unbind.cc
repo/upscaler/: download.sh
samples/: README.md
samples/BabelDOC/: README.md
samples/BabelDOC/webapp/: README.md  app.py
samples/BabelDOC/webapp/static/css/: styles.css
samples/BabelDOC/webapp/static/js/: script.js
samples/BabelDOC/webapp/templates/: index.html
samples/MeetingHelper/: 0_run_api.sh  1_run.sh  meeting_helper.py
samples/MinerU/: README.md
samples/OCR/img_batch_ocr/: .env  README.md  ocr.py  requirements.txt
samples/Videolingo/: README.md
samples/VoiceChat/: audio2audio_chat.py
samples/WebHub/: web_hub.py
samples/aTrain/: README.md
samples/lobechat/: run_docker.sh
scripts/: init_app.sh  init_env.sh  run.sh
support/: nginx_api.conf
